# Hotel

./: .gitignore  pyproject.toml
hotel/: hotel.db.sqlite3
hotel/core/: forms.py  models.py  urls.py  utils.py  views.py  widgets.py
hotel/core/migrations/: 0001_initial.py  0002_initial.py  0003_user_photo.py
hotel/hotel/: settings.py  urls.py
hotel/orders/: forms.py  mixins.py  models.py  urls.py  validators.py  views.py
hotel/orders/migrations/: 0001_initial.py  0002_orders_room.py  0003_alter_orders_room.py  0004_remove_orders_title_room_remove_orders_type_room_and_more.py
hotel/rooms/: forms.py  models.py  urls.py  views.py
hotel/rooms/migrations/: 0001_initial.py  0002_remove_rooms_main_photo.py  0003_alter_rooms_type_room.py  0004_alter_rooms_type_room.py
hotel/services/: apps.py
hotel/static/: content.css  login.css  navbar.css  sidebar.css  style.css
hotel/templates/: base.html  sidebar.html
hotel/templates/core/: login.html
hotel/templates/core/roles/: create.html  list.html  update.html
hotel/templates/core/users/: create.html  list.html  update.html
hotel/templates/orders/: create.html  list.html
hotel/templates/rooms/: create.html  detail.html  list.html  update.html
