[tool.poetry]
name = "hotel"
version = "0.1.0"
description = ""
authors = ["Nastya Hurynovich <nastia.gurinovich96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-bootstrap-v5 = "^1.0.11"
django-flatpickr = "^2.0.0"
django-role = "^0.1.6"
pillow = "^9.5.0"
django-debug-toolbar = "^4.0.0"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
